Fixed gradle setup + added preview features flag